[gd_scene load_steps=17 format=3 uid="uid://cc0nc4xa5f6sw"]

[ext_resource type="Script" uid="uid://cugme85ja85ib" path="res://scenes/joy_pad_editable.gd" id="1_hyd27"]
[ext_resource type="Shader" uid="uid://ls13bb20e1tm" path="res://shaders/blur.tres" id="2_jlh06"]
[ext_resource type="Texture2D" uid="uid://c3x3sl3dh28le" path="res://assets/Menu/HUD.png" id="2_tbr7s"]
[ext_resource type="PackedScene" uid="uid://xm02h8hrmfmi" path="res://scenes/knob.tscn" id="3_jlh06"]
[ext_resource type="Theme" uid="uid://dq2k6takiambk" path="res://themes/theme.tres" id="4_tbr7s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_armiw"]
shader = ExtResource("2_jlh06")
shader_parameter/blur_amount = 5.0
shader_parameter/color_over = Color(0, 0, 0, 1)
shader_parameter/mix_amount = 0.5
shader_parameter/alpha = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hyd27"]
atlas = ExtResource("2_tbr7s")
region = Rect2(50, 210, 12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_tbr7s"]
radius = 15.0

[sub_resource type="AtlasTexture" id="AtlasTexture_jlh06"]
atlas = ExtResource("2_tbr7s")
region = Rect2(374, 6, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_armiw"]
atlas = ExtResource("2_tbr7s")
region = Rect2(140, 252, 24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vpdp"]
size = Vector2(35, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_y75kr"]
atlas = ExtResource("2_tbr7s")
region = Rect2(140, 60, 24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sicvn"]
size = Vector2(35, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay1b3"]
atlas = ExtResource("2_tbr7s")
region = Rect2(140, 156, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6eoy"]
atlas = ExtResource("2_tbr7s")
region = Rect2(140, 204, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmxl0"]
atlas = ExtResource("2_tbr7s")
region = Rect2(140, 108, 24, 24)

[node name="JoyPadEditable" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hyd27")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_armiw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoyPad" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_horizontal_guides_ = [492.0, 160.0]

[node name="Control" type="Control" parent="JoyPad"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 24.0
grow_horizontal = 0
pivot_offset = Vector2(24, -24)

[node name="TouchScreenButton4" type="TouchScreenButton" parent="JoyPad/Control"]
position = Vector2(-6, -6)
texture_normal = SubResource("AtlasTexture_hyd27")
shape = SubResource("CircleShape2D_tbr7s")
action = "ui_cancel"
visibility_mode = 1

[node name="Control2" type="Control" parent="JoyPad"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = -56.0
offset_right = 62.0
offset_bottom = -56.0
grow_vertical = 0
pivot_offset = Vector2(-62, 56)

[node name="TextureRect" type="TouchScreenButton" parent="JoyPad/Control2"]
position = Vector2(-39, -39)
scale = Vector2(1.5, 1.5)
texture_normal = SubResource("AtlasTexture_jlh06")
visibility_mode = 1

[node name="Knob" parent="JoyPad/Control2" instance=ExtResource("3_jlh06")]
scale = Vector2(1.5, 1.5)

[node name="Control4" type="Control" parent="JoyPad"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -56.0
offset_right = -56.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(56, 56)

[node name="TouchScreenButton2" type="TouchScreenButton" parent="JoyPad/Control4"]
position = Vector2(-32, 8)
texture_normal = SubResource("AtlasTexture_armiw")
shape = SubResource("RectangleShape2D_5vpdp")
action = "attack"
visibility_mode = 1

[node name="TouchScreenButton4" type="TouchScreenButton" parent="JoyPad/Control4"]
position = Vector2(8, 8)
texture_normal = SubResource("AtlasTexture_y75kr")
shape = SubResource("RectangleShape2D_sicvn")
action = "jump"
visibility_mode = 1

[node name="TouchScreenButton5" type="TouchScreenButton" parent="JoyPad/Control4"]
position = Vector2(8, -32)
texture_normal = SubResource("AtlasTexture_ay1b3")
shape = SubResource("RectangleShape2D_sicvn")
action = "shoot"
visibility_mode = 1

[node name="TouchScreenButton6" type="TouchScreenButton" parent="JoyPad/Control4"]
position = Vector2(-32, -32)
texture_normal = SubResource("AtlasTexture_m6eoy")
shape = SubResource("RectangleShape2D_sicvn")
action = "flash"
visibility_mode = 1

[node name="TouchScreenButton7" type="TouchScreenButton" parent="JoyPad/Control4"]
position = Vector2(-72, 8)
texture_normal = SubResource("AtlasTexture_tmxl0")
shape = SubResource("RectangleShape2D_sicvn")
action = "enter"
visibility_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_right = 37.0
offset_bottom = 16.0
grow_horizontal = 2
theme = ExtResource("4_tbr7s")

[node name="HBoxContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "大小"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 0.2
max_value = 1.0
step = 0.1
value = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "保存"

[node name="Exit" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "退出"

[node name="MessageView" type="CanvasLayer" parent="."]
layer = 3

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Exit" to="." method="_on_exit_pressed"]
